--- a/Makefile.rpi_ARM64
+++ b/Makefile.rpi_ARM64
@@ -1,4 +1,4 @@
-CFLAGS  ?= -Wall -fPIC -s -O3 -march=armv8-a+crc -mtune=cortex-a53 -mfpu=neon-fp-armv8 -mfloat-abi=hard -DDSD -DALSA $(OPTS)
+CFLAGS  ?= -Wall -fPIC -s -O3 -march=armv8-a+crc -mtune=cortex-a53 -DLINUX -DDSD -DALSA $(OPTS)
 LDFLAGS ?= -s -lasound -lpthread -lm -ldl -lrt -Wl,-rpath,/usr/local/lib
 EXECUTABLE ?= squeezelite-rpi3
 
