--- a/Makefile.rpi
+++ b/Makefile.rpi
@@ -1,4 +1,4 @@
-CFLAGS  ?= -Wall -fPIC -s -O3 -march=armv7-a -mtune=cortex-a7 -mfpu=neon-vfpv4 -mfloat-abi=hard -DDSD -DALSA $(OPTS)
+CFLAGS  ?= -Wall -fPIC -s -O3 -march=armv7-a -mtune=cortex-a7 -DLINUX -DDSD -DALSA $(OPTS)
 LDFLAGS ?= -s -lasound -lpthread -lm -ldl -lrt -Wl,-rpath,/usr/local/lib
 EXECUTABLE ?= squeezelite-rpi2
 
